Change the dbus name that the seahorse application claims

This is so it doesn't conflict with the seahorse-daemon dbus name
owned by libcryptui

https://bugzilla.gnome.org/show_bug.cgi?id=694053